test/conformance/chainsaw/validate/clusterpolicy/cornercases/two-rules-with-different-action/bad-resources.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: bad-ns-1
  labels:
    environment: production
---
apiVersion: v1
kind: Namespace
metadata:
  name: bad-ns-2
