test/conformance/chainsaw/validate/clusterpolicy/cornercases/two-rules-with-different-action/chainsaw-test.yaml
# yaml-language-server: $schema=https://raw.githubusercontent.com/kyverno/chainsaw/main/.schemas/json/test-chainsaw-v1alpha1.json
apiVersion: chainsaw.kyverno.io/v1alpha1
kind: Test
metadata:
  name: two-rules-with-different-action
spec:
  concurrent: false
  steps:
  - name: step-01
    try:
    - script:
        content: kubectl patch configmap kyverno -p '{"data":{"generateSuccessEvents":"true"}}' -n kyverno
    - assert:
        file: kyverno-configmap-assert.yaml
  - name: create policy
    use:
      template: ../../../../_step-templates/create-policy.yaml
      with:
        bindings:
        - name: file
          value: policy.yaml
  - name: wait policy ready
    use:
      template: ../../../../_step-templates/cluster-policy-ready.yaml
      with:
        bindings:
        - name: name
          value: check-ns-labels
  - name: step-03
    try:
    - apply:
        file: good-resources.yaml
  - name: step-04
    try:
      - apply:
          expect:
            - check:
                ($error != null): true
          file: bad-resources.yaml
  - name: step-05
    try:
    - assert:
        file: events-assert.yaml
